--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     
     <!-- SEO Meta Tags -->
-    <title>Contact Us | AV Production & Event Rentals</title>
+    <title>Contact Us | SA Event</title>
     <meta name="description"
         content="Get in touch with AV Production for quotes, support, or inquiries. Contact us via our form, email, or phone for all your event production needs." />
     <meta name="robots" content="index, follow" />
@@ -170,7 +170,7 @@
         <nav class="nav" aria-label="Main">
             <a href="index.html" class="brand">
                 <div class="brand-badge" aria-hidden="true"></div>
-                <p class="brand-text">AV Production</p>
+                <p class="brand-text">SA Event</p>
             </a>
             <div class="menu" id="main-menu">
                 <a href="index.html#services">Services</a>
