--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    
+
     <!-- SEO Meta Tags -->
-    <title>Contact Us | SA Event</title>
+    <title>Contact Us | AV Production & Event Rentals</title>
     <meta name="description"
         content="Get in touch with AV Production for quotes, support, or inquiries. Contact us via our form, email, or phone for all your event production needs." />
     <meta name="robots" content="index, follow" />
@@ -13,32 +14,60 @@
 
     <style>
         :root {
-            --bg: #0b0e13;
-            --surface: #121720;
-            --muted: #1a2130;
-            --text: #e9eef7;
-            --sub: #b8c2d6;
-            --primary: #7ae1f8;
-            --accent: #9b7af8;
+            /* Vibrant palette to match index */
+            --bg: #100f1c;
+            --surface: #1d1b2f;
+            --muted: #2a2845;
+            --text: #f0eefc;
+            --sub: #aca8cb;
+            --primary: #ffc700;
+            /* gold */
+            --accent: #ff007f;
+            /* magenta */
             --radius: 14px;
             --shadow: 0 10px 30px rgba(0, 0, 0, .35);
             --header-height: 61px;
+
+            /* Focus ring tuned for visibility */
+            --ring: 0 0 0 3px rgba(255, 199, 0, .45);
         }
-        * { box-sizing: border-box }
-        html, body {
+
+        /* Base */
+        * {
+            box-sizing: border-box
+        }
+
+        html,
+        body {
             height: 100%;
-            scroll-behavior: smooth;
+            scroll-behavior: smooth
         }
+
         body {
             margin: 0;
             padding-top: var(--header-height);
             font-family: system-ui, -apple-system, Segoe UI, Roboto, Inter, Ubuntu, Arial, sans-serif;
             color: var(--text);
-            background: var(--bg);
+            /* Match index: subtle dual radial glow + deep bg */
+            background:
+                radial-gradient(1200px 600px at 10% -10%, rgba(255, 199, 0, .12), transparent 50%),
+                radial-gradient(900px 500px at 90% -20%, rgba(255, 0, 127, .12), transparent 50%),
+                var(--bg);
+            background-attachment: fixed;
         }
-        a { color: inherit; text-decoration: none }
-        img, iframe { max-width: 100%; display: block }
 
+        a {
+            color: inherit;
+            text-decoration: none
+        }
+
+        img,
+        iframe {
+            max-width: 100%;
+            display: block
+        }
+
+        /* Header (glass with border) */
         header {
             position: fixed;
             top: 0;
@@ -46,9 +75,10 @@
             width: 100%;
             z-index: 50;
             backdrop-filter: saturate(140%) blur(10px);
-            background: rgba(11, 14, 19, .8);
+            background: rgba(16, 15, 28, .6);
             border-bottom: 1px solid rgba(255, 255, 255, .06);
         }
+
         .nav {
             max-width: 1200px;
             margin: 0 auto;
@@ -58,24 +88,64 @@
             align-items: center;
             justify-content: space-between;
         }
-        .brand { display: flex; align-items: center; gap: 10px; }
+
+        .brand {
+            display: flex;
+            align-items: center;
+            gap: 10px
+        }
+
         .brand-badge {
             width: 36px;
             height: 36px;
             border-radius: 10px;
             background: conic-gradient(from 0deg, var(--primary), var(--accent), var(--primary));
-            box-shadow: 0 6px 18px rgba(122, 225, 248, .25), inset 0 0 30px rgba(155, 122, 248, .25);
+            box-shadow: 0 6px 18px rgba(255, 199, 0, .25), inset 0 0 30px rgba(255, 0, 127, .25);
         }
-        .brand .brand-text { font-size: 16px; margin: 0; }
-        .menu a { padding: 8px 10px; color: var(--sub); transition: color .2s; }
-        .menu a:hover { color: var(--text); }
-        .menu-toggle { display: none; }
+
+        .brand .brand-text {
+            font-size: 16px;
+            margin: 0;
+            letter-spacing: .3px
+        }
+
+        .menu a {
+            position: relative;
+            padding: 8px 10px;
+            color: var(--sub);
+            transition: color .2s ease;
+        }
+
+        .menu a:hover {
+            color: var(--text)
+        }
+
+        .menu a::after {
+            content: "";
+            position: absolute;
+            left: 10px;
+            right: 10px;
+            bottom: 0;
+            height: 2px;
+            background: linear-gradient(90deg, var(--primary), var(--accent));
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform .25s ease;
+        }
+
+        .menu a:hover::after {
+            transform: scaleX(1)
+        }
+
+        .menu-toggle {
+            display: none
+        }
 
         @media (max-width: 768px) {
-            /* Responsive header styles */
+            /* You can replicate your index mobile menu if needed */
         }
 
-        /* Contact Page Styles */
+        /* Layout */
         .contact-wrapper {
             max-width: 1100px;
             margin: 60px auto;
@@ -85,63 +155,50 @@
             gap: 40px;
             align-items: flex-start;
         }
+
         @media (max-width: 900px) {
-            .contact-wrapper { grid-template-columns: 1fr; }
+            .contact-wrapper {
+                grid-template-columns: 1fr
+            }
         }
 
+        /* Headings/lead */
         .contact-form h1 {
             font-size: clamp(28px, 4vw, 42px);
             margin: 0 0 10px 0;
+            /* Gradient ink like index titles */
+            background: linear-gradient(90deg, var(--primary), var(--accent));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
+
         .contact-form p {
             color: var(--sub);
             margin: 0 0 30px 0;
             max-width: 55ch;
         }
 
-        .form-group { margin-bottom: 20px; }
-        .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            font-size: 14px;
-            color: var(--sub);
-        }
-        .form-group input, .form-group textarea {
-            width: 100%;
-            padding: 12px;
-            background: var(--surface);
-            border: 1px solid var(--muted);
-            border-radius: 8px;
-            color: var(--text);
-            font-size: 16px;
-        }
-        .form-group textarea { resize: vertical; min-height: 120px; }
-        
-        .submit-btn {
-            padding: 14px 24px;
-            background: linear-gradient(90deg, var(--primary), var(--accent));
-            border: none;
-            border-radius: 8px;
-            color: #071018;
-            font-weight: bold;
-            cursor: pointer;
-            font-size: 16px;
-            transition: opacity .2s;
-        }
-        .submit-btn:hover { opacity: 0.9; }
-
+        /* Card-esque side panel */
         .contact-info {
             background: var(--surface);
             padding: 30px;
             border-radius: var(--radius);
-            border: 1px solid var(--muted);
+            border: 1px solid rgba(255, 255, 255, .08);
+            box-shadow: var(--shadow);
         }
+
         .contact-info h2 {
             font-size: 24px;
             margin: 0 0 20px 0;
-            border-bottom: 1px solid var(--muted);
             padding-bottom: 15px;
+            border-bottom: 1px solid rgba(255, 255, 255, .08);
+            background: linear-gradient(90deg, var(--primary), var(--accent));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
+
         .info-item {
             display: flex;
             align-items: center;
@@ -149,28 +206,112 @@
             margin-bottom: 20px;
             color: var(--sub);
         }
-        .info-item a { transition: color .2s; }
-        .info-item a:hover { color: var(--primary); }
+
+        .info-item a {
+            transition: color .2s ease
+        }
+
+        .info-item a:hover {
+            color: var(--primary)
+        }
+
         .map-container {
             margin-top: 30px;
             border-radius: var(--radius);
             overflow: hidden;
-            border: 1px solid var(--muted);
+            border: 1px solid rgba(255, 255, 255, .08);
+            box-shadow: var(--shadow);
         }
+
         .map-container iframe {
             width: 100%;
             height: 250px;
-            border: 0;
+            border: 0
+        }
+
+        /* Form */
+        .form-group {
+            margin-bottom: 20px
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-size: 14px;
+            color: var(--sub);
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 12px 14px;
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, .10);
+            background: linear-gradient(180deg, rgba(255, 255, 255, .06), rgba(255, 255, 255, .02));
+            color: var(--text);
+            font-size: 16px;
+            outline: none;
+            transition: border-color .2s ease, box-shadow .2s ease, transform .15s ease;
+            box-shadow: var(--shadow);
+        }
+
+        .form-group textarea {
+            resize: vertical;
+            min-height: 140px
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            box-shadow: var(--ring)
+        }
+
+        /* Button styled like index .btn-primary */
+        .submit-btn {
+            padding: 12px 18px;
+            border: 1px solid transparent;
+            border-radius: 12px;
+            cursor: pointer;
+            font-weight: 600;
+            font-size: 16px;
+            color: #071018;
+            background: linear-gradient(90deg, var(--primary), var(--accent));
+            box-shadow: var(--shadow);
+            transition: transform .15s ease, opacity .2s ease;
+        }
+
+        .submit-btn:hover {
+            transform: translateY(-2px);
+            opacity: .95
+        }
+
+        .submit-btn:active {
+            transform: translateY(0)
+        }
+
+        /* Subtle container treatment similar to index contact strip */
+        .contact-form {
+            background: linear-gradient(135deg, rgba(255, 199, 0, .10), rgba(255, 0, 127, .10));
+            border: 1px solid rgba(255, 255, 255, .08);
+            border-radius: var(--radius);
+            padding: 24px;
+            box-shadow: var(--shadow);
+        }
+
+        /* Focus visibility */
+        :focus-visible {
+            outline: none;
+            box-shadow: var(--ring)
         }
     </style>
 </head>
+
 <body>
 
     <header>
         <nav class="nav" aria-label="Main">
             <a href="index.html" class="brand">
                 <div class="brand-badge" aria-hidden="true"></div>
-                <p class="brand-text">SA Event</p>
+                <p class="brand-text">AV Production</p>
             </a>
             <div class="menu" id="main-menu">
                 <a href="index.html#services">Services</a>
@@ -190,7 +331,8 @@
         <div class="contact-wrapper">
             <section class="contact-form" aria-labelledby="contact-heading">
                 <h1 id="contact-heading">Contact Us</h1>
-                <p>Have a question or ready to start your project? Fill out the form below, and our team will get back to you within 24 hours.</p>
+                <p>Have a question or ready to start your project? Fill out the form below, and our team will get back
+                    to you within 24 hours.</p>
                 <form action="#" method="POST" aria-label="Contact Form">
                     <div class="form-group">
                         <label for="name">Full Name</label>
@@ -231,11 +373,9 @@
                     <p style="margin:0;"><strong>Hours:</strong> Sun - Thu, 9:00 AM - 6:00 PM</p>
                 </div>
                 <div class="map-container">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.823619559381!2d55.15286561500731!3d25.07390998395353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6b4a3fe4a929%3A0x86c9c64c39c44754!2sDubai%20Media%20City!5e0!3m2!1sen!2sae!4v1668852654321!5m2!1sen!2sae" 
-                        allowfullscreen="" 
-                        loading="lazy" 
-                        referrerpolicy="no-referrer-when-downgrade"
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.823619559381!2d55.15286561500731!3d25.07390998395353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6b4a3fe4a929%3A0x86c9c64c39c44754!2sDubai%20Media%20City!5e0!3m2!1sen!2sae!4v1668852654321!5m2!1sen!2sae"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
                         title="Office Location Map">
                     </iframe>
                 </div>
@@ -246,4 +386,5 @@
     <!-- You can include the same footer as your main page if desired -->
 
 </body>
+
 </html>
