--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <!-- SEO Meta Tags -->
-    <title>Contact Us | Trio Pixel Event</title>
+    <title>Contact Us | AV Production & Event Rentals</title>
     <meta name="description"
-        content="Get in touch with Trio Pixel Event for quotes, support, or inquiries. Contact us via our form, email, or phone for all your event production needs." />
+        content="Get in touch with AV Production for quotes, support, or inquiries. Contact us via our form, email, or phone for all your event production needs." />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.yourwebsite.com/contact" />
 
@@ -384,10 +384,11 @@
 </head>
 
 <body>
+    <!-- Inside <header> ... -->
     <header>
         <nav class="nav" aria-label="Main">
-            <a href="index.html" class="brand" aria-label="Trio Pixel Event home">
-                <img src="images/logo.png" alt="Trio Pixel Event" class="brand-logo" width="148" height="40" />
+            <a href="index.html" class="brand" aria-label="AV Production home">
+                <img src="images/logo.jpg" alt="AV Production" class="brand-logo" width="148" height="40" />
             </a>
             <div class="menu" id="main-menu">
                 <a href="index.html#services">Services</a>
@@ -400,6 +401,7 @@
             </button>
         </nav>
     </header>
+
 
     <main>
         <div class="contact-wrapper">
@@ -432,7 +434,7 @@
                 <h2>Contact Information</h2>
                 <div class="info-item">
                     <span>📧</span>
-                    <a href="mailto:contact@triopixel.com">contact@triopixel.com</a>
+                    <a href="mailto:contact@avproduction.com">contact@avproduction.com</a>
                 </div>
                 <div class="info-item">
                     <span>📞</span>
@@ -461,4 +463,10 @@
         class="whatsapp-float" aria-label="Chat on WhatsApp" rel="noopener" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 16 16" fill="currentColor"
             aria-hidden="true">
-            <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338
+            <path
+                d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232" />
+        </svg>
+    </a>
+</body>
+
+</html>
