--- a/contact.html
+++ b/contact.html
@@ -249,7 +249,7 @@
   <header>
     <nav class="nav" aria-label="Main">
       <a href="index.html" class="brand" aria-label="Trio Pixel Events home">
-        <img src="images/logo.jpg" alt="Trio Pixel Events" class="brand-logo" width="148" height="40" />
+        <img src="images/logo.png" alt="Trio Pixel Events" class="brand-logo" width="148" height="40" />
       </a>
       <div class="menu" id="main-menu">
         <a href="index.html#services">Services</a>
