--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
   <footer>
     <div class="foot">
       <span>© 2025 SA Events</span>
-      <span>Dubai • Abu Dhabi • Riyadh</span>
+      <span>Dubai</span>
     </div>
   </footer>
 
