--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
   <footer>
     <div class="foot">
-      <span>© 2025 SA Events</span>
+      <span>© 2025 Trio Pixel Events LLC Dubai</span>
       <span>Dubai</span>
     </div>
   </footer>
